<resources>
    <color name="grey">#E2E2E2</color>
    <string name="app_name">TodoList</string>
    <string name="Add_comment">Add comment</string>
    <string name="activity1_name">Layout AM</string>
    <string name="activity2_name">Layout PM</string>

    <string name="time1">6:00 AM</string>
    <string name="time2">6:30 AM</string>
    <string name="time3">7:00 AM</string>
    <string name="time4">7:30 AM</string>
    <string name="time5">8:00 AM</string>
    <string name="time6">8:30 AM</string>
    <string name="time7">9:00 AM</string>
    <string name="time8">9:30 AM</string>
    <string name="time9">10:00 AM</string>
    <string name="time10">10:30 AM</string>
    <string name="time11">11:00 AM</string>
    <string name="time12">11:30 AM</string>
    <string name="time13">12:00 PM</string>
    <string name="time14">12:30 PM</string>
    <string name="time15">1:00 PM</string>
    <string name="time16">1:30 PM</string>
    <string name="time17">2:00 PM</string>
    <string name="time18">2:30 PM</string>
    <string name="time19">3:00 PM</string>
    <string name="time20">3:30 PM</string>
    <string name="time21">4:00 PM</string>
    <string name="time22">4:30 PM</string>
    <string name="time23">5:00 PM</string>
    <string name="time24">5:30 PM</string>


    <string name="time25">6:00 PM</string>
    <string name="time26">6:30 PM</string>
    <string name="time27">7:00 PM</string>
    <string name="time28">7:30 PM</string>
    <string name="time29">8:00 PM</string>
    <string name="time30">8:30 PM</string>
    <string name="time31">9:00 PM</string>
    <string name="time32">9:30 PM</string>
    <string name="time33">10:00 PM</string>
    <string name="time34">10:30 PM</string>
    <string name="time35">11:00 PM</string>
    <string name="time36">11:30 PM</string>
    <string name="time37">12:00 AM</string>
    <string name="time38">12:30 AM</string>
    <string name="time39">1:00 AM</string>
    <string name="time40">1:30 AM</string>
    <string name="time41">2:00 AM</string>
    <string name="time42">2:30 AM</string>
    <string name="time43">3:00 AM</string>
    <string name="time44">3:30 AM</string>
    <string name="time45">4:00 AM</string>
    <string name="time46">4:30 AM</string>
    <string name="time47">5:00 AM</string>
    <string name="time48">5:30 AM</string>

    <string name="settings">AM/PM</string>
    <string name="menu">Menu</string>
    <string name="select">Select</string>
    <string name="join">Join</string>
    <string name="remove">Remove</string>
    <string name="service_title">Tasks</string>
    <string name="add_textbox_hint">Add a Task Here</string>
    <string name="add_button_text">Add</string>
    <string name="checkbox_text">Item Text</string>
    <string name="menu_refresh">Refresh</string>
    <string name="create">Create</string>
    <string name="menu_title">Layout Menu</string>
    <string name="open">Open</string>
    <string name="confirm">Confirm</string>
    <string name="status">Status</string>
    <string name="newB">New</string>
    <string name="progB">In Progress</string>
    <string name="comB">Complete</string>
    <string name="finish">Finish</string>
    <string name="addComment">Add Comment</string>
    <string name="removeComment">Remove Comment</string>
    <string name="Admin">Admin</string>
</resources>
