<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aziflaj.todolist.LayoutActivity"
    tools:showIn="@layout/layout_am">

    <Button
        style="@android:style/Widget.Button.Toggle"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:text="@string/settings"
        android:onClick="launchPmView"
        android:layout_marginLeft="30dp" />

    <Button
        android:id="@+id/btime1"
        style="@android:style/Widget.Button"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="5dp"
        android:text="@string/time1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="5dp"
        android:onClick="onClick" />
    
    <Button
        android:id="@+id/btime2"
        style="@android:style/Widget.Button"
        android:layout_toEndOf="@+id/btime1"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/time2"
        android:layout_toRightOf="@+id/btime1"
        android:onClick="onClick" />
    
    <Button
        android:id="@+id/btime3"
        style="@android:style/Widget.Button"
        android:layout_toEndOf="@+id/btime2"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/time3"
        android:layout_toRightOf="@+id/btime2"
        android:onClick="onClick" />

    <Button
        android:id="@+id/btime4"
        style="@android:style/Widget.Button"
        android:layout_toEndOf="@+id/btime3"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/time4"
        android:layout_toRightOf="@+id/btime3" 
        android:onClick="onClick" />


    <!--     -->

    <Button
        android:id="@+id/btime5"
        android:layout_height="80dp"
        style="@android:style/Widget.Button"
        android:layout_width="80dp"
        android:layout_below="@id/btime1"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime1"
        android:layout_alignEnd="@id/btime1"
        android:text="@string/time5"
        android:layout_alignLeft="@id/btime1"
        android:layout_alignRight="@id/btime1"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btime6"
        style="@android:style/Widget.Button"
        android:layout_toEndOf="@+id/btime5"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime2"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime2"
        android:layout_alignEnd="@id/btime2"
        android:text="@string/time6"
        android:layout_toRightOf="@+id/btime5"
        android:layout_alignLeft="@id/btime2"
        android:layout_alignRight="@id/btime2"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/btime7"
        style="@android:style/Widget.Button"
        android:layout_toEndOf="@+id/btime6"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime3"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime3"
        android:layout_alignEnd="@id/btime3"
        android:text="@string/time7"
        android:layout_toRightOf="@+id/btime6"
        android:layout_alignRight="@id/btime3"
        android:layout_alignLeft="@id/btime3"
        android:onClick="onClick" />

    <Button
        android:id="@+id/btime8"
        style="@android:style/Widget.Button"
        android:layout_toEndOf="@+id/btime7"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime4"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime4"
        android:layout_alignEnd="@id/btime4"
        android:text="@string/time8"
        android:layout_toRightOf="@+id/btime7"
        android:layout_alignLeft="@id/btime4"
        android:layout_alignRight="@id/btime4"
        android:onClick="onClick" />


    <!--     -->

    <Button
        android:id="@+id/btime9"
        style="@android:style/Widget.Button"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime5"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime5"
        android:layout_alignEnd="@id/btime5"
        android:text="@string/time9"
        android:layout_alignLeft="@id/btime5"
        android:layout_alignRight="@id/btime5"
        android:onClick="onClick" />

    <Button
        android:id="@+id/btime10"
        style="@android:style/Widget.Button"
        android:layout_toEndOf="@+id/btime9"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime6"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime6"
        android:layout_alignEnd="@id/btime6"
        android:text="@string/time10"
        android:onClick="onClick" />
    <Button
        android:id="@+id/btime11"
        style="@android:style/Widget.Button"
        android:layout_toEndOf="@+id/btime10"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime7"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime7"
        android:layout_alignEnd="@id/btime7"
        android:text="@string/time11"
        android:onClick="onClick" />

    <Button
        android:id="@+id/btime12"
        style="@android:style/Widget.Button"
        android:layout_toEndOf="@+id/btime11"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime8"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime8"
        android:layout_alignEnd="@id/btime8"
        android:text="@string/time12"
        android:onClick="onClick" />


    <!--     -->

    <Button
        android:id="@+id/btime13"
        style="@android:style/Widget.Button"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime9"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime9"
        android:layout_alignEnd="@id/btime9"
        android:text="@string/time13"
        android:onClick="onClick" />
    <Button
        android:id="@+id/btime14"
        style="@android:style/Widget.Button"
        android:layout_toEndOf="@+id/btime13"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime10"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime10"
        android:layout_alignEnd="@id/btime10"
        android:text="@string/time14"
        android:onClick="onClick" />
    <Button
        android:id="@+id/btime15"
        style="@android:style/Widget.Button"
        android:layout_toEndOf="@+id/btime14"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime11"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime11"
        android:layout_alignEnd="@id/btime11"
        android:text="@string/time15"
        android:onClick="onClick" />

    <Button
        android:id="@+id/btime16"
        style="@android:style/Widget.Button"
        android:layout_toEndOf="@+id/btime15"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime12"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime12"
        android:layout_alignEnd="@id/btime12"
        android:text="@string/time16"
        android:onClick="onClick" />


    <!--     -->

    <Button
        android:id="@+id/btime17"
        style="@android:style/Widget.Button"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime13"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime13"
        android:layout_alignEnd="@id/btime13"
        android:text="@string/time17"
        android:onClick="onClick" />
    <Button
        android:id="@+id/btime18"
        style="@android:style/Widget.Button"
        android:layout_toEndOf="@+id/btime17"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime14"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime14"
        android:layout_alignEnd="@id/btime14"
        android:text="@string/time18"
        android:onClick="onClick" />
    <Button
        android:id="@+id/btime19"
        style="@android:style/Widget.Button"
        android:layout_toEndOf="@+id/btime18"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime15"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime15"
        android:layout_alignEnd="@id/btime15"
        android:text="@string/time19"
        android:onClick="onClick" />

    <Button
        android:id="@+id/btime20"
        style="@android:style/Widget.Button"
        android:layout_toEndOf="@+id/btime19"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime16"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime16"
        android:layout_alignEnd="@id/btime16"
        android:text="@string/time20"
        android:onClick="onClick" />


    <!--     -->

    <Button
        android:id="@+id/btime21"
        style="@android:style/Widget.Button"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime17"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime17"
        android:layout_alignEnd="@id/btime17"
        android:text="@string/time21"
        android:onClick="onClick" />
    <Button
        android:id="@+id/btime22"
        style="@android:style/Widget.Button"
        android:layout_toEndOf="@+id/btime21"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime18"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime18"
        android:layout_alignEnd="@id/btime18"
        android:text="@string/time22"
        android:onClick="onClick" />
    <Button
        android:id="@+id/btime23"
        style="@android:style/Widget.Button"
        android:layout_toEndOf="@+id/btime22"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime19"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime19"
        android:layout_alignEnd="@id/btime19"
        android:text="@string/time23"
        android:onClick="onClick" />

    <Button
        android:id="@+id/btime24"
        style="@android:style/Widget.Button"
        android:layout_toEndOf="@+id/btime23"
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:layout_below="@id/btime20"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/btime20"
        android:layout_alignEnd="@id/btime20"
        android:text="@string/time24"
        android:onClick="onClick" />



</RelativeLayout>